Another step further

--- a/2021-03-02-the-art-of-being.org
+++ b/2021-03-02-the-art-of-being.org
@@ -226,195 +226,204 @@ poet, and a singer, and a lot of other things.
 
 We all have our own thing, that's the magic, and everybody comes with
 their own sense of strength, and their own queendom. Mine could never
-compare to hers, and hers could never compare to mine. Caroline
-McHugh: See, you didn't even know you had a queendom. That's what it
-looks like. When you figure out how to be yourself it's an incredibly
-liberating, untragic way to go through life. You don't develop an
-identity that's predicated on being a patchwork personality. You're
-not a composite, an amalgam, of all your experiences and influences.
-You're not just somebody's boss, or somebody's mom, or anybody's
-anything. You're yourself. However, the chances are, there are at
-least four of you sitting in each of those chairs, so let me introduce
-yourselves. The most visible "you" that you represent to the outside
-world is what everybody else thinks of you, and there are as many
-opinions of you as there are people. I want you to imagine you're like
-a big USB stick that you plug into the world. You show up on the
-desktop of the world. That's the power of context. If you don't
-understand that bit, being yourself can be an ill-advised strategy. So
-of course it's important that you understand perception, but one of
+compare to hers, and hers could never compare to mine.
+
+Caroline McHugh: See, you didn't even know you had a queendom.
+
+That's what it looks like. When you figure out how to be yourself it's
+an incredibly liberating, untragic way to go through life. You don't
+develop an identity that's predicated on being a patchwork
+personality. You're not a composite, an amalgam, of all your
+experiences and influences. You're not just somebody's boss, or
+somebody's mom, or anybody's anything. You're yourself.
+
+However, the chances are, there are at least four of you sitting in
+each of those chairs, so let me introduce yourselves. The most visible
+"you" that you represent to the outside world is what everybody else
+thinks of you, and there are as many opinions of you as there are
+people. I want you to imagine you're like a big USB stick that you
+plug into the world. You show up on the desktop of the world. That's
+the power of context. If you don't understand that bit, being yourself
+can be an ill-advised strategy.
+
+So of course it's important that you understand perception, but one of
 the things I've noticed, in terms of gender, and I'm terribly,
 untragically woman by the way. I don't find myself tragically woman. I
 describe myself as a womanist, rather than a feminist, but I'm also a
 card-carrying feminist. There are very few things that I think are
 gender-specific, but one of them is something I call "approval
 addiction." The need to be liked, the need for approbation, or
-recognition, or for somebody to tell you it's okay. I find more woman
-suffer from that affliction than men, and I think it's one of the most
-debilitating things. When it comes to being yourself needing other
-people's approval, loving sombody else's opinion, and mistaking it for
-your own is one of the most debilitating things you'll do on the road
-to being yourself. You will never, ever be perception-less, but it's
-important to be perception-free. One of the things that is going to
-help you to be perception-free is to tune into the next circle of the
-"I complex." This is your wish image. This is what you would like
-everybody else to think of you, and it's not about being fake, or fad,
-or pretending. It's about moving; it's about possibility; it's about
-potential; it's about supposition. So, whilst there's a part of you
-that's like your backbone, this part of you is like your wishbone.
-This one is your adaptive personality, your construct self, and even
-that's unique because nobody in the world has had the same experiences
-or influences that you have. But this is the you that keeps moving,
-that keeps changing all the time. And it helps you avoid being one of
-those people ... You know the people that say to you they have 15
-years experience when they mean one year, 15 times? They literally
-repeat themselves, year, after year, after year. What I want you to
-think about is with every passing year, your job is to be better and
-better at being who you already are. This is not a cosmetic exercise.
-You're already different. Your job is to figure out how, and then to
-be more of that. Now, there are certain times in your life that lend
-themselves to change, that make change quicker, deeper. I call them
-intervals of possibility. Now, they're not always as well sign-posted
-as this one, but you know those times in your life when you come to a
-bifurcation on the path, and you sense that the potential for change
-is heightened. You meet a stranger in a bar; you have to decide what
-you're going to do. Your boss comes to you and offers you a new job.
-What do you want, you want to keep doing the same thing, or do you
-want this job? And you know that if you make that change, the speed of
-your life will change. Unfortunately, some of these interventions,
-some of these intervals of possibility, are catastrophic. In fact,
-most of them are catastrophic 'cause most of us would rather sleepwalk
-until something happens to wake us up. And what will happen is
-somebody you love will get sick, or you'll get sick, or you'll get
-fired. Or maybe it's something impersonal. Maybe 9/11 happens, or the
-tsunami happens, or the Kashmiri earthquake happens, but something
-happens that rocks you back into that inner self, and makes you ask
-the question I asked you at the beginning of this talk. The problem is
-when it happens catastrophically is you're vulnerable, you're weak.
-And my question is, why wouldn't you ask yourself these questions when
-you're strong, from a position of health? When you're in a job, when
-you're loved: that's when the questions become most useful. So the
-question on this one is, "If you could be the woman of your dreams,
-who would you be?" And my tongue's nowhere near my cheek when I ask
-you that question. The thing that might stop you being the woman of
-your dreams is the next circle, and that's what you think of you. So
-now you've got what others think of you, what you would like others to
-think of you, and this is what you think of you. And you have good
-days and bad days, right? There's days where you wake up and you think
-you're the bee's knees. And other days you wake up and you can't even
-say your name. Even your cellphone feels too heavy. On the days when
-you wake up and you feel like the bee's knees, it's not even like
-you've got a reason. It's like free-floating joy in your body just
-looking for a target, and you know how it feels on those days because
-(sizzling sound). You just think, "Somebody give me an audience; I'm
-on fire! Quick, point me somewhere!" And your hair's fabulous, and
-everything just works, everything works on those days. But the other
-days nothing works. Your legs don't work, your mouth doesn't work. The
-word thief comes and steals your entire vocabulary. Those are two
-extremes of your ego, and one of them is about self-congratulation,
-and the other one is about self-castigation. Now your entire life, I
-don't care who you are, I don't care how old you are, your entire
-life, from birth up until now has been about building a stable
-relationship with your ego. You need an ego to live in a Western,
-capitalist world. If you didn't have an ego you'd be toast. But your
-challenge is to take the ego from its dominant position and pull it
-back, so that it's in service to yourself. That's when it becomes
-useful, and in order to do that you've got to find the still point
-right in the middle of those two extremes. That's what I would call
-equanimity, or equilibrium, and it's the kind of state of mind that
-cannot be perfumed in any way by anything that happens outside you.
-This kind of confidence that comes from there is like the confidence
-of the sky. Right now it's dark outside, but you know if you went up
-in a plane, even in the stormiest of days, the sky's brilliant blue
-underneath. When you look at the sky, and it's made a rainbow, and
-it's absolutely gorgeous, there's no question that the sky's up there
-going, "Ha, did you see my rainbow?" Or when it's a terrible, bleak,
-you know, gray, gloomy day, that the sky's going to apologize. No, the
-sky just is, because the sky sees the impermanence of the clouds, and
-the impermanence of the rainbows, and you have to develop an inner
-state of mind that's as impervious to all the good shit and bad shit
-that happens to you as the sky is to the weather. We would also call
-this, in a Western context, we would call this feeling a feeling of
-humility, and one day last week where I got to work with UK Sport, and
-particularly, I got to work with the amazing coaches, who worked with
-the amazing Olympic athletes, who got all those amazing results at the
-Summer Olympics. It was incredible to be in the same room as 400 of
-these people. The woman who runs UK Sport is a woman called Baroness
-Campbell, and she gave me a definition of humility that's as good as
-any I've ever found. She said, "Humility is not thinking less of
-yourself; humility is thinking about yourself less." And I remembered
-learning that lesson when I was a wee girl and probably no more than
-seven or eight, it was the woman with the squinty mouth that taught me
-the lesson. She had no idea, my mother, what she was doing to me as I
-was growing up, but when I grew up in Glasgow, particularly
-working-class, steel-industry Glasgow, nobody had any money, so nobody
-could afford to go out and be entertained. Everybody's social life
-happened in a house, so at the weekends, all the wrinklys and all the
-kids would show up at people's houses, and they would drink 'til their
-kneecaps were on backwards, and all that kind of stuff, but everybody
-at some point in the evening had to perform. And it was a riot,
-because these people were bus conductresses, and welders, and
-carpenters by daytime, but then they'd show up at nighttime and come
-and be Frank Sinatra, and Dean Martin, and Sarah Vaughan, and Billy
-Eckstine. They were all... in my house it was like a star-studded
-affair, living in my house, and all the kids were taught to perform as
-well. And so, I'm the oldest of four girls - my mother had four
-daughters. So did my father, interestingly enough. But we were brought
-up from any age to perform, and we'd be wheeled out at these family
-parties, me with my guitar and my sisters around me, and we'd have to
-sing. We'd be literally positioned, Jose, like the Von Trapps. You
-know, my father would say, "Beneda there, Louise there," and then we
-would sing, and we were terrible. We were absolutely rubbish. One
-night my mother came up to get us and we were having pillow fights she
-showed up and she said, "Right lasses, everybody's ready. Go down and
-give them a song." And this night I was just overcome. I said, "I
-don't want to sing." She said, "Why do you not want to sing?" I said,
-"I'm shy." She said, "What're you shy for?" I said, "Well, everybody's
-going to be looking at me," and I'll never forget her face. She looked
-at me, she said, "Caroline, don't flatter yourself, darlin'.
-(Laughter) You think anybody downstairs is interested in you? They're
-not. Your job's to go and make them happy, so go and sing." I said
-"okay", and I picked up my guitar and I picked up my sisters, and you
-know what? That advice has never left me. But what it has left me with
-is spectacular disregard for where my abilities end, and spectacular
-disregard for being the center of attention. In fact, since that day,
-I have never been the center of attention. You're the center of mine,
-and that's a very different feeling. So last, the last you, and the
-opposite of least, is the ever-present unchanging you. This is the you
-that you've been since you were seven, and the you that you'll be when
-you're 107, please God. I spend a lot of time in India, and in India
-you're raised with this feeling that you're a spiritual being who
-happens to be in a physical body, whereas we in the West are much more
-into our physical bodies, and then if we get old enough and long in
-the tooth enough, we kind of get interested in spirit. But, if you've
-ever been to the Gandhi museum in Delhi you'll know that this is the
-line that is above the door, and it was actually a response by Gandhi
-to a question from a journalist. Gandhi was getting on a train and the
-journalist called after him, "Gandhiji, Gandhiji, what's your message
-to the world?" And Gandhi turned around and said, "My life. My life's
-my message." And your life is your message, too. It might not be as
-big a message as Gandhi's - mine certainly isn't - but your life has
-to be your message. Otherwise, why are you here? It's not like you've
-got a spare. So when you think about your identity, when you think
-about what it means to be alive, when you think about why you deserve
-to exist, you're not your thoughts, because you think them. And you
-can't be your feelings, because otherwise, who's the you that feels
-them? You're not what you have; you're not what you do; you're not
-even who you love, or who loves you. There has to be something
-underneath all that. When you look at people who have managed to
-transcend all these judgments that we put upon them - You know, this
-man here, he couldn't be judged as a man, or a black man, or young, or
-old, or Democrat, or Republican, nor a gay, or a straight. It really,
-really wouldn't have mattered because he knew why he was here. Yes, we
-can. So you see, he seemed to be a verb. Even when you're born without
-many of the attributes that some of your peers may have, even when
-you're born in a way that may lead you to feel impotent, if you can
-tap into that voice, if you can tap into that inner voice that I've
-been talking about, you might just end up being, at 12 years old, the
-youngest person ever called to the National World Champion Swim Team.
-You might even end up at the age of 13 being the youngest Olympian
-gold medal winner, ever. You might even end up at 14 being the
-youngest person ever to get an MBE. That's what happens when you dial
-in to the personal pronoun. So if you can do this, not only will the
-speed of your life get quicker, not only will the substance of your
-life get richer, but you will never feel superfluous again. (Applause)
-Thank you.
+recognition, or for somebody to tell you it's okay.
+
+I find more woman suffer from that affliction than men, and I think
+it's one of the most debilitating things. When it comes to being
+yourself needing other people's approval, loving sombody else's
+opinion, and mistaking it for your own is one of the most debilitating
+things you'll do on the road to being yourself. You will never, ever
+be perception-less, but it's important to be perception-free.
+
+One of the things that is going to help you to be perception-free is
+to tune into the next circle of the "I complex." This is your wish
+image. This is what you would like everybody else to think of you, and
+it's not about being fake, or fad, or pretending. It's about moving;
+it's about possibility; it's about potential; it's about supposition.
+
+So, whilst there's a part of you that's like your backbone, this part
+of you is like your wishbone. This one is your adaptive personality,
+your construct self, and even that's unique because nobody in the
+world has had the same experiences or influences that you have. But
+this is the you that keeps moving, that keeps changing all the time.
+And it helps you avoid being one of those people ... You know the
+people that say to you they have 15 years experience when they mean
+one year, 15 times? They literally repeat themselves, year, after
+year, after year. What I want you to think about is with every passing
+year, your job is to be better and better at being who you already
+are. This is not a cosmetic exercise. You're already different. Your
+job is to figure out how, and then to be more of that. Now, there are
+certain times in your life that lend themselves to change, that make
+change quicker, deeper. I call them intervals of possibility. Now,
+they're not always as well sign-posted as this one, but you know those
+times in your life when you come to a bifurcation on the path, and you
+sense that the potential for change is heightened. You meet a stranger
+in a bar; you have to decide what you're going to do. Your boss comes
+to you and offers you a new job. What do you want, you want to keep
+doing the same thing, or do you want this job? And you know that if
+you make that change, the speed of your life will change.
+Unfortunately, some of these interventions, some of these intervals of
+possibility, are catastrophic. In fact, most of them are catastrophic
+'cause most of us would rather sleepwalk until something happens to
+wake us up. And what will happen is somebody you love will get sick,
+or you'll get sick, or you'll get fired. Or maybe it's something
+impersonal. Maybe 9/11 happens, or the tsunami happens, or the
+Kashmiri earthquake happens, but something happens that rocks you back
+into that inner self, and makes you ask the question I asked you at
+the beginning of this talk. The problem is when it happens
+catastrophically is you're vulnerable, you're weak. And my question
+is, why wouldn't you ask yourself these questions when you're strong,
+from a position of health? When you're in a job, when you're loved:
+that's when the questions become most useful. So the question on this
+one is, "If you could be the woman of your dreams, who would you be?"
+And my tongue's nowhere near my cheek when I ask you that question.
+The thing that might stop you being the woman of your dreams is the
+next circle, and that's what you think of you. So now you've got what
+others think of you, what you would like others to think of you, and
+this is what you think of you. And you have good days and bad days,
+right? There's days where you wake up and you think you're the bee's
+knees. And other days you wake up and you can't even say your name.
+Even your cellphone feels too heavy. On the days when you wake up and
+you feel like the bee's knees, it's not even like you've got a reason.
+It's like free-floating joy in your body just looking for a target,
+and you know how it feels on those days because (sizzling sound). You
+just think, "Somebody give me an audience; I'm on fire! Quick, point
+me somewhere!" And your hair's fabulous, and everything just works,
+everything works on those days. But the other days nothing works. Your
+legs don't work, your mouth doesn't work. The word thief comes and
+steals your entire vocabulary. Those are two extremes of your ego, and
+one of them is about self-congratulation, and the other one is about
+self-castigation. Now your entire life, I don't care who you are, I
+don't care how old you are, your entire life, from birth up until now
+has been about building a stable relationship with your ego. You need
+an ego to live in a Western, capitalist world. If you didn't have an
+ego you'd be toast. But your challenge is to take the ego from its
+dominant position and pull it back, so that it's in service to
+yourself. That's when it becomes useful, and in order to do that
+you've got to find the still point right in the middle of those two
+extremes. That's what I would call equanimity, or equilibrium, and
+it's the kind of state of mind that cannot be perfumed in any way by
+anything that happens outside you. This kind of confidence that comes
+from there is like the confidence of the sky. Right now it's dark
+outside, but you know if you went up in a plane, even in the stormiest
+of days, the sky's brilliant blue underneath. When you look at the
+sky, and it's made a rainbow, and it's absolutely gorgeous, there's no
+question that the sky's up there going, "Ha, did you see my rainbow?"
+Or when it's a terrible, bleak, you know, gray, gloomy day, that the
+sky's going to apologize. No, the sky just is, because the sky sees
+the impermanence of the clouds, and the impermanence of the rainbows,
+and you have to develop an inner state of mind that's as impervious to
+all the good shit and bad shit that happens to you as the sky is to
+the weather. We would also call this, in a Western context, we would
+call this feeling a feeling of humility, and one day last week where I
+got to work with UK Sport, and particularly, I got to work with the
+amazing coaches, who worked with the amazing Olympic athletes, who got
+all those amazing results at the Summer Olympics. It was incredible to
+be in the same room as 400 of these people. The woman who runs UK
+Sport is a woman called Baroness Campbell, and she gave me a
+definition of humility that's as good as any I've ever found. She
+said, "Humility is not thinking less of yourself; humility is thinking
+about yourself less." And I remembered learning that lesson when I was
+a wee girl and probably no more than seven or eight, it was the woman
+with the squinty mouth that taught me the lesson. She had no idea, my
+mother, what she was doing to me as I was growing up, but when I grew
+up in Glasgow, particularly working-class, steel-industry Glasgow,
+nobody had any money, so nobody could afford to go out and be
+entertained. Everybody's social life happened in a house, so at the
+weekends, all the wrinklys and all the kids would show up at people's
+houses, and they would drink 'til their kneecaps were on backwards,
+and all that kind of stuff, but everybody at some point in the evening
+had to perform. And it was a riot, because these people were bus
+conductresses, and welders, and carpenters by daytime, but then they'd
+show up at nighttime and come and be Frank Sinatra, and Dean Martin,
+and Sarah Vaughan, and Billy Eckstine. They were all... in my house it
+was like a star-studded affair, living in my house, and all the kids
+were taught to perform as well. And so, I'm the oldest of four girls -
+my mother had four daughters. So did my father, interestingly enough.
+But we were brought up from any age to perform, and we'd be wheeled
+out at these family parties, me with my guitar and my sisters around
+me, and we'd have to sing. We'd be literally positioned, Jose, like
+the Von Trapps. You know, my father would say, "Beneda there, Louise
+there," and then we would sing, and we were terrible. We were
+absolutely rubbish. One night my mother came up to get us and we were
+having pillow fights she showed up and she said, "Right lasses,
+everybody's ready. Go down and give them a song." And this night I was
+just overcome. I said, "I don't want to sing." She said, "Why do you
+not want to sing?" I said, "I'm shy." She said, "What're you shy for?"
+I said, "Well, everybody's going to be looking at me," and I'll never
+forget her face. She looked at me, she said, "Caroline, don't flatter
+yourself, darlin'. (Laughter) You think anybody downstairs is
+interested in you? They're not. Your job's to go and make them happy,
+so go and sing." I said "okay", and I picked up my guitar and I picked
+up my sisters, and you know what? That advice has never left me. But
+what it has left me with is spectacular disregard for where my
+abilities end, and spectacular disregard for being the center of
+attention. In fact, since that day, I have never been the center of
+attention. You're the center of mine, and that's a very different
+feeling. So last, the last you, and the opposite of least, is the
+ever-present unchanging you. This is the you that you've been since
+you were seven, and the you that you'll be when you're 107, please
+God. I spend a lot of time in India, and in India you're raised with
+this feeling that you're a spiritual being who happens to be in a
+physical body, whereas we in the West are much more into our physical
+bodies, and then if we get old enough and long in the tooth enough, we
+kind of get interested in spirit. But, if you've ever been to the
+Gandhi museum in Delhi you'll know that this is the line that is above
+the door, and it was actually a response by Gandhi to a question from
+a journalist. Gandhi was getting on a train and the journalist called
+after him, "Gandhiji, Gandhiji, what's your message to the world?" And
+Gandhi turned around and said, "My life. My life's my message." And
+your life is your message, too. It might not be as big a message as
+Gandhi's - mine certainly isn't - but your life has to be your
+message. Otherwise, why are you here? It's not like you've got a
+spare. So when you think about your identity, when you think about
+what it means to be alive, when you think about why you deserve to
+exist, you're not your thoughts, because you think them. And you can't
+be your feelings, because otherwise, who's the you that feels them?
+You're not what you have; you're not what you do; you're not even who
+you love, or who loves you. There has to be something underneath all
+that. When you look at people who have managed to transcend all these
+judgments that we put upon them - You know, this man here, he couldn't
+be judged as a man, or a black man, or young, or old, or Democrat, or
+Republican, nor a gay, or a straight. It really, really wouldn't have
+mattered because he knew why he was here. Yes, we can. So you see, he
+seemed to be a verb. Even when you're born without many of the
+attributes that some of your peers may have, even when you're born in
+a way that may lead you to feel impotent, if you can tap into that
+voice, if you can tap into that inner voice that I've been talking
+about, you might just end up being, at 12 years old, the youngest
+person ever called to the National World Champion Swim Team. You might
+even end up at the age of 13 being the youngest Olympian gold medal
+winner, ever. You might even end up at 14 being the youngest person
+ever to get an MBE. That's what happens when you dial in to the
+personal pronoun. So if you can do this, not only will the speed of
+your life get quicker, not only will the substance of your life get
+richer, but you will never feel superfluous again. (Applause) Thank
+you.
