--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -193,6 +193,13 @@ tags: [book, template]
       
 ***** Even a perfunctury analysis shows a plethora caveats in these judgements
 
+***** The principal aim was to find the optimum formula
+      for wedding words and music.
+
+***** Science and music was very intertwined there
+
+***** Out of sight out of mind
+
 ***** 
 **** Competitors
 
