Several new idioms there

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -193,6 +193,15 @@ tags: [book, template]
       
 ***** Even a perfunctury analysis shows a plethora caveats in these judgements
 
+***** The animals are taught to read and write, but the dream turns sour
+
+***** It is screamingly obvious in the domain of cognitive biases
+
+***** I will summarize the soul and science of my work
+
+      
+***** I think it's one of the most debilitating things.
+
 ***** 
 **** Competitors
 
