--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -200,7 +200,14 @@ tags: [book, template]
 
 ***** Out of sight out of mind
 
-***** 
+***** If you want to build a ship,
+      don't drum up the men to gather wood, divide the work and give
+      orders. Instead, teach them to yearn for the vast and endless
+      sea. - Antoine de Saint—Exupery
+
+***** A leader is best when people barely know he exists,
+      when his work is done, his aim fulfilled, they will say: we did
+      it ourselves. - Lao Tzu
 **** Competitors
 
 **** Retrospecive analysis
