--- a/2021-03-20-45-life-lessons.org
+++ b/2021-03-20-45-life-lessons.org
@@ -13,3 +13,59 @@ tags: [life, lessons]
 #+OPTIONS: tags:nil num:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
+
+1. Life isn't /fair/, but it's still /good/.
+2. When in /doubt/, jut take the next small /step/.
+3. Life is too /short/ to waste time /hating/ anyone.
+4. Don't take yourself so /seriously/. No one else does.
+5. Pay off your /credit cards/ every /month/.
+6. You don't have to win every argument. /Agree to disagree/.
+7. Cry with /someone/. It's more /healing/ than crying /alone/.
+8. Save for /retirement/, starting with your /first/ payship.
+9. When it comes to /chocolate/, resistance is /futile/.
+10. Make /peace/ with your /past/ so it won't screw up the /present/.
+11. It's /okay/ to let your /children/ see you /cry/.
+12. Don't compare your life to /others/. You have no idea what their
+    jurney is all about.
+13. If a /relationship/ has to be a /secret/, you /shouldn't/ be in
+    it.
+14. Life is too /short/ for long /pity parties/. Get busy /living/, or
+    get busy /dying/.
+15. You can get through /anything/ if you stay put in /today/.
+16. A writer /writes/. If you want to be a writer, /write/.
+17. It's never /too late/ to have a happy /childhood/. But the second
+    one is up to /you/ and no one else.
+18. When it comes to going after what you /love/ in life, don't take
+    /no/ for an answer.
+19. Burn the /candles/; use the /nice sheets/; wear the /fancy
+    lingerine/. Don't save it for a special occasion. Today is
+    /special/.
+20. /Overprepare/, then go with the /flow/.
+21. Be /eccentric/ now. Don't wait for /old age/ to wear /purple/.
+22. The most important /sex organ/ is the /brain/.
+23. No one is in charge of your /happiness/ except you.
+24. /Frame/ every so-called /disaster/ with these words: "In /five
+    years/, will this /matter?/"
+25. /Forgive/ everyone /everything/.
+26. What other people /think/ of /you/ is none of your /business/.
+27. Time heals almost /everything/. Give time, /time/.
+28. However /good/ or /bad/ a situation is, it will /change/.
+29. Your /job/ won't take care of you when you are /sick/. Your
+    /friends will/. Stay in touch.
+30. /Believe/ in /miracles/.
+31. Whatever doesn't /kill you really does/ make you /stronger/.
+32. Growing /old/ beats the alternative - /dying young/.
+33. Your /children/ get only /one/ childhood. Make it /memorable/.
+34. Get outside /every day/. /Miracles/ are waiting /everywhere/.
+35. If we all threw our /problem/ in a /pile/ and saw everyone else's,
+    we'd /grab ours back/.
+36. Don't /audit/ life. /Show up/ and make the most of it /now/.
+37. Get rid of anything that isn't /useful, beautyful/ or /joyful/.
+38. /Envy/ is a waste of /time/. You already have all you /need/.
+39. The /best/ is yet to /come/.
+40. All that /truly/ matters in the /end/ is that you /loved/.
+41. No matter how you /feel/, /get up/, /dress up/, and /show up/.
+42. Take a /deep breath/. It /calms/ the /mind/.
+43. If you don't /ask/, you don't /get/.
+44. /Yield/.
+45. Life isn't tied with a bow, but it's still a /gift/.
