--- a/2021-03-05-chromebook-as-ide.org
+++ b/2021-03-05-chromebook-as-ide.org
@@ -54,7 +54,7 @@ tags: [tutorial, ide, chromebook]
   : under the terms of the GNU General Public License.
   : For more information about these matters, see the file named COPYING.
   
-* Note about package management in =Buster=
+* A note about package management in =Buster=
 
   For ~security~ purpose several much popular =Elpa= packages are
   included in =Buster= repositories and available to install as
